--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: datahut
 Type: Package
-Title: Data for Statistical Analysis  
+Title: Data for Statistical Data Analysis  
 Version: 0.0.0.9999
 Authors@R: person("Priyanga Dilini", "Talagala", email="pritalagala@gmail.com", role= c("aut","cre"))
 Maintainer: Priyanga Dilini Talagala <pritalagala@gmail.com>
-Description: Provides datasets for Statistical Analysis
+Description: Provides datasets for statistical data analysis.
+Suggests:
+  fable
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Depends: 
-    R (>= 2.10)
+    R (>= 4.0.0)
 RoxygenNote: 7.1.1
